--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "author": "Joel Worsham",
     "license": "GPLv2 or later",
     "devDependencies": {
-        "grunt": "^0.4.5",
-        "grunt-autoprefixer": "^1.0.0",
-        "grunt-contrib-uglify": "~0.5.1",
-        "grunt-contrib-watch": "~0.6.1",
-        "grunt-sass": "^0.14.0",
-        "grunt-contrib-copy": "~0.6.0",
-        "matchdep": "~0.3.0"
+        "grunt": "~0.4",
+        "grunt-autoprefixer": "~1.0",
+        "grunt-contrib-uglify": "~0.5",
+        "grunt-contrib-watch": "~0.6",
+        "grunt-sass": "~0.14",
+        "grunt-contrib-sass": "~0.8",
+        "grunt-contrib-copy": "~0.7",
+        "matchdep": "~0.3"
     }
 }
