--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "browserify": "^14.1.0",
     "fetchify": "0.0.2",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-just-replace": "^1.0.2",
     "gulp-load-plugins": "^1.1.0",
@@ -25,14 +25,15 @@
     "gulp-sass": "^3.1.0",
     "gulp-sort": "^2.0.0",
     "gulp-sourcemaps": "^2.4.0",
-    "gulp-uglify": "^2.0.0",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp-wp-pot": "^2.0.3",
+    "gulp-if": "^2.0.0",
     "promise-polyfill": "^6.0.2",
-    "react": "^15.4.2",
-    "react-css-transition-replace": "^2.1.0",
-    "react-dom": "^15.4.2",
-    "react-sortable-hoc": "^0.4.12",
+    "react": "^16.0.0",
+    "react-css-transition-replace": "^3.0.2",
+    "react-dom": "^16.0.0",
+    "react-sortable-hoc": "^0.6.8",
     "reactify": "^1.1.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
