--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "url": "https://github.com/realbigplugins/client-dash.git"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-preset-react": "^6.23.0",
     "babelify": "^7.3.0",
     "browserify": "^14.1.0",
