Lots of changes

--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "url": "https://github.com/realbigplugins/client-dash.git"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "babel-preset-react": "^6.23.0",
-    "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^15.2.0",
     "fetchify": "0.0.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.0",
+    "gulp-if": "^2.0.0",
     "gulp-just-replace": "^1.0.2",
     "gulp-load-plugins": "^1.1.0",
     "gulp-notify": "^3.0.0",
@@ -29,15 +31,14 @@
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp-wp-pot": "^2.0.3",
-    "gulp-if": "^2.0.0",
-    "promise-polyfill": "^6.0.2",
+    "promise-polyfill": "^7.0.0",
     "react": "^16.0.0",
     "react-css-transition-replace": "^3.0.2",
     "react-dom": "^16.0.0",
     "react-sortable-hoc": "^0.6.8",
     "reactify": "^1.1.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
     "vinyl-transform": "^1.0.0",
     "whatwg-fetch": "^2.0.3"
   },
