Fix gulp version to prevent bad releases in future

--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
-    "gulp-just-replace": "^1.0.2",
-    "gulp-load-plugins": "^1.1.0",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-sort": "^2.0.0",
     "gulp-sourcemaps": "^2.6.4",
