--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "babelify": "^8.0.0",
     "browserify": "^15.2.0",
     "fetchify": "0.0.2",
-    "gulp": "^3.9.0",
+    "gulp": "gulpjs/gulp#4.0",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-if": "^2.0.0",
