--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "core/library/rbm-field-helpers"]
 	path = core/library/rbm-field-helpers
-	url = https://github.com/realbig/rbm-field-helpers.git
+	url = git@github.com:realbig/rbm-field-helpers.git
